fix : update noncompliant code for sonarqube